[gd_scene load_steps=6 format=3 uid="uid://cqx3ffxmc71by"]

[ext_resource type="PackedScene" uid="uid://brp0ew2rcbhse" path="res://player.tscn" id="1_543a7"]
[ext_resource type="Script" path="res://demo.gd" id="1_xqy2n"]
[ext_resource type="PackedScene" uid="uid://b3xnuxt0w62s8" path="res://world.tscn" id="2_4wagc"]
[ext_resource type="Resource" uid="uid://d2p62i1e7w6fy" path="res://GlobalData/crops_database.tres" id="2_lesya"]
[ext_resource type="PackedScene" uid="uid://06c1ij3vamrq" path="res://UI/HUD.tscn" id="3_grrx6"]

[node name="Demo" type="Node2D"]
script = ExtResource("1_xqy2n")
crop_stats = ExtResource("2_lesya")

[node name="World" parent="." instance=ExtResource("2_4wagc")]

[node name="Player" parent="." instance=ExtResource("1_543a7")]
position = Vector2(559, 344)

[node name="HUD" parent="." instance=ExtResource("3_grrx6")]

[connection signal="interact" from="Player" to="." method="_on_player_interact"]
[connection signal="query_coords" from="Player" to="." method="_on_player_query_coords"]
[connection signal="toggle_backpack" from="Player" to="HUD" method="_on_player_toggle_backpack"]
[connection signal="use_item" from="Player" to="." method="_on_player_use_item"]
